[project]
name = "pre-commit-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "zhengwenfeng",email = "zhengwenfeng37@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
